k8s/demo-namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: zcp-demo
  
---

apiVersion: v1
kind: Namespace
metadata:
  name: demo-system
