k8s/cloud-movie-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: cloud-movie-ingress
  namespace: zcp-demo
spec:
  rules:
  - host: cloud-movie-canary.cloudzcp.io
    http:
      paths:
      - backend:
          serviceName: cloud-movie-frontend-canary
          servicePort: 80
  - host: cloud-movie-new.cloudzcp.io
    http:
      paths:
      - backend:
          serviceName: cloud-movie-frontend-new
          servicePort: 80
  tls:
  - hosts:
    - cloud-movie.cloudzcp.io
    secretName: cloudzcp-io-cert
